--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-	<title>Carlos Rodríguez | Front-end developer | carlos@labproy.com</title>
+	<title>Carlos Rodríguez | Front-end developer</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
 	<meta name="keywords" content="" />
@@ -29,7 +29,7 @@
 					<div class="contact-info">
 						<h3><a id="pdf" href="assets/carlos_rodriguez_resume.pdf">Download PDF</a></h3>
 						<h3><a href="mailto:carlos@labproy.com">carlos@labproy.com</a></h3>
-						<h3>01(33)3640-3261,</br> 044(33)1467-1690</h3>
+						<h3>01(33)3640-3261</h3>
 					</div><!--// .contact-info -->
 				</div>
 			</div><!--// .yui-gc -->
@@ -121,8 +121,8 @@
 							<h2>Education</h2>
 						</div>
 						<div class="yui-u">
-							<h2>University of Guadalajara - Guadalajara, Jalisco, México</h2>
-							<h3>Major, Financial Management &mdash; Minor, Information Technology </h3>
+							<h3>University of Guadalajara - Guadalajara, Jalisco, México</h3>
+							<p>Major, Financial Management &mdash; Minor, Information Technology </p>
 						</div>
 					</div><!--// .yui-gf -->
 				</div><!--// .yui-b -->
