--- a/spanish.html
+++ b/spanish.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-	<title>Carlos Rodríguez | Desarrollador web | carlos@labproy.com</title>
+	<title>Carlos Rodríguez | Desarrollador web</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
 	<meta name="keywords" content="" />
@@ -29,7 +29,7 @@
 					<div class="contact-info">
 						<h3><a id="pdf" href="assets/carlos_rodriguez_resume_es.pdf">Descargar PDF</a></h3>
 						<h3><a href="mailto:carlos@labproy.com">carlos@labproy.com</a></h3>
-						<h3>01(33)3640-3261</br> 044(33)1467-1690</h3>
+						<h3>01(33)3640-3261</h3>
 					</div><!--// .contact-info -->
 				</div>
 			</div><!--// .yui-gc -->
@@ -45,7 +45,7 @@
 						</div>
 						<div class="yui-u">
 							<p class="enlarge">
-								Emprendedor de 28 años con base en Guadalajara, Mexico. Fundador de dos empresas, <a href="http://labproy.com">Labproy</a> creada en el 2010 (una agencia creativa enfocada al desarrollo web con fines comerciales); y <a href="http://capworth.com.mx">Capworth</a> creada en el 2008 (una firma de consultoría para el desarrollo de tecnología e infraestructura administrativa). </br> Puede manejar varios proyectos, tareas y grandes cantidades de información al mismo tiempo. Pocas veces está satisfecho con el estado actual de las cosas; siempre está a la búsqueda de formas de cambiar y mejorar los sistemas, métodos y resultados actuales. No le gusta la rutina, prefiere tener mucha variedad en su trabajo y se adapta rápidamente a las tareas y situaciones cambiantes. Es muy intelectual y le gusta investigar los hechos, necesita pruebas de apoyo. Tiene un fuerte interés por la gente y puede ser efectivo en las situaciones interpersonales. También puede trabajar bien por sí solo en pensar y planear las tareas.
+								Desarrollador de 28 años con base en Guadalajara, Mexico. Creador de <a href="http://labproy.com">Labproy</a> en el 2010 (una agencia creativa enfocada al desarrollo web con fines comerciales) y co-creador de <a href="http://capworth.com.mx">Capworth</a> en el 2008 (una firma de consultoría para el desarrollo de tecnología e infraestructura administrativa). </br> Puede manejar varios proyectos, tareas y grandes cantidades de información al mismo tiempo. Pocas veces está satisfecho con el estado actual de las cosas; siempre está a la búsqueda de formas de cambiar y mejorar los sistemas, métodos y resultados actuales. No le gusta la rutina, prefiere tener mucha variedad en su trabajo y se adapta rápidamente a las tareas y situaciones cambiantes. Es muy intelectual y le gusta investigar los hechos, necesita pruebas de apoyo. Tiene un fuerte interés por la gente y puede ser efectivo en las situaciones interpersonales. También puede trabajar bien por sí solo en pensar y planear tareas.
 						</div>
 					</div><!--// .yui-gf -->
 
@@ -101,9 +101,9 @@
 
 							<div class="job">
 								<h2>Labproy</h2>
-								<h3>Gerente de proyectos, desarrollador web</h3>
+								<h3>Director de proyectos, desarrollador web</h3>
 								<h4>2010-currently</h4>
-								<p>Implementación de estrategias comerciales basadas en tecnología web y medios sociales. Dirección de proceso creativo lidereando un equipo de diseñadores, fotografos y redactores. </p>
+								<p>Implementación de estrategias comerciales basadas en tecnología web y medios sociales. Dirección de procesos creativos lidereando un equipo de diseñadores, fotografos y redactores. </p>
 							</div>
 							<div class="job last">
 								<h2>Capworth</h2>
@@ -121,8 +121,8 @@
 							<h2>Educación</h2>
 						</div>
 						<div class="yui-u">
-							<h2>Universidad de Guadalajara - Guadalajara, Jalisco, México</h2>
-							<h3>Licenciatura en Administración Financiera y Sistemas de Información </h3>
+							<h3>Universidad de Guadalajara - Guadalajara, Jalisco, México</h3>
+							<hp>Licenciatura en Administración Financiera y Sistemas de Información </p>
 						</div>
 					</div><!--// .yui-gf -->
 				</div><!--// .yui-b -->
